[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Textures/pink square.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Textures/MuzzleFlash2.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Health.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Weapon.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=2]
resource_name = "muzzle_flash"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon/MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.4, 0.4 ) ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 32, 32 )
script = ExtResource( 1 )
Bullet = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 32, 32 )
scale = Vector2( 12.8, 21.3333 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 32 )
shape = SubResource( 1 )

[node name="Health" parent="." instance=ExtResource( 5 )]

[node name="Weapon" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="BulletSpawn" type="Position2D" parent="Weapon"]
position = Vector2( 72, 32 )

[node name="GunDirection" type="Position2D" parent="Weapon"]
position = Vector2( 88, 32 )

[node name="AttackCooldown" type="Timer" parent="Weapon"]
wait_time = 0.7
one_shot = true

[node name="MuzzleFlash" type="Sprite" parent="Weapon"]
visible = false
position = Vector2( 80, 32 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
region_rect = Rect2( 3.75, 155.75, 452.25, 226.125 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapon"]
anims/muzzle_flash = SubResource( 2 )
